--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "puppeteer": "^24.10.2"
+    "json2csv": "^6.0.0-alpha.2",
+    "puppeteer": "^24.10.2",
+    "xlsx": "^0.18.5"
   }
 }
