--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "json2csv": "^6.0.0-alpha.2",
+    "pdfkit": "^0.17.1",
     "puppeteer": "^24.10.2",
     "xlsx": "^0.18.5"
   }
